[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "ASYNC",
    # comprehensions
    "C4",
    # implicit string concat
    "ISC",
    # pytest style
    "PT",
    # return
    "RET",
    # use pathlib
    "PTH",
    # remove commented code
    "ERA",
    # pandas-vet
    "PD",
    # use specific error code for type ignores
    "PGH",
    # pylint
    "PL",
    # numpy
    "NPY",
    "PERF",
    "FURB",
]
ignore = [
    # Line too long
    "E501",
    # open should be replaced by Path.open
    "PTH123",
    "ISC001",
]

[tool.mypy]
strict = true

[tool.uv]
package = true

[project]
name = "hse-tp-task-test"
version = "0.1.0"
description = ""
authors = [
    { name = "AndBoyS", email = "andboyxd@gmail.com" }
]
readme = "README.md"
requires-python = "~=3.13"
dependencies = [
    "click>=8.1.7",
    "mypy>=1.13.0",
    "natsort>=8.4.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.1.1",
    "ruff>=0.8.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
